--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Meu HelloWorld!</title>
+        <title>My Page</title>
     </head>
     <body>
-        <h1>Hello World!<h1>
+        <h1>Under construction...<h1>
     </body>
 </html>
